--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.1.3",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/vue": "^6.1.11",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "v-calendar": "^2.4.2",
+    "vue": "^2.7.16",
+    "vue-google-oauth2": "^1.5.10",
+    "vue-router": "^3.6.5",
+    "vue2-datepicker": "^3.11.1",
+    "vue2-daterange-picker": "^0.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,6 +32,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "file-loader": "^6.2.0",
+    "vue-cli-plugin-tailwind": "~3.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
